--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   </head>
   <body>
     <input type="text" id="nameIn" placeholder="Employee Name"></input>
+    <button type="button" name="getInputName" onclick="getInputName()">GetInputName</button>
+    <button type="button" name="bonusDetermine" onclick="bonusDetermine(employeeName)">bonusDetermine</button>
   </body>
 </html>
